Lots of CMake changes (some unnecessary?)
In trying to figure out the issue with GSI, go insane in trying to get
flags exact including:

* Adding ${BYTERECLEN} all over post
* Add ${BIG_ENDIAN} to stoch and arpack
* Correct pnagpack flags (which were all wrong)

--- a/GEOS_Util/post/CMakeLists.txt
+++ b/GEOS_Util/post/CMakeLists.txt
@@ -39,34 +39,34 @@ install(
    PROGRAMS ${perlscripts} ec2grd.csh
    DESTINATION bin)
 
-set_property(SOURCE rsg3_vinterp.F APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${EXTENDED_SOURCE}")
-set_property(SOURCE rs_vinterp.F90 APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8}")
-set_property(SOURCE rs_vinterp_scm.F90 APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8}")
+set_property(SOURCE rsg3_vinterp.F APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE rs_vinterp.F90 APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${BYTERECLEN}")
+set_property(SOURCE rs_vinterp_scm.F90 APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${BYTERECLEN}")
 
-set_property(SOURCE dynamics_lattice_module.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE mpi_util.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE mymalloc.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE windfix.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE timer.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE gmap.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE fft.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE convert_eta.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE ec_prs2eta.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE era5_prs2eta.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE ec_prs2fv.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE eta2prs.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE eta2rst.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE flat2hdf.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE fvrst.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE gg2eta.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE gg2fv.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE hdf2rs.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE makeiau.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE merra2scm.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE rs2hdf.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE rs_hinterp.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE time_ave.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE convert_aerosols.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
+set_property(SOURCE dynamics_lattice_module.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE mpi_util.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE mymalloc.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE windfix.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE timer.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE gmap.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE fft.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE convert_eta.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE ec_prs2eta.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE era5_prs2eta.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE ec_prs2fv.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE eta2prs.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE eta2rst.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE flat2hdf.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE fvrst.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE gg2eta.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE gg2fv.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE hdf2rs.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE makeiau.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE merra2scm.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE rs2hdf.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE rs_hinterp.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE time_ave.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
+set_property(SOURCE convert_aerosols.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN} ${EXTENDED_SOURCE}")
 set_property(SOURCE PWSSSP.F APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${EXTENDED_SOURCE} ${BYTERECLEN}")
 set_property(SOURCE alias.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN}")
 
