--- a/arpack/PARPACK/UTIL/MPI/CMakeLists.txt
+++ b/arpack/PARPACK/UTIL/MPI/CMakeLists.txt
@@ -6,7 +6,7 @@ set (SRCS
 
 # This is equivalent to FOPT=$(FOPT2) in GNU Make
 if (CMAKE_Fortran_COMPILER_ID MATCHES Intel)
-   string (REPLACE "${FOPT3}" "${FOPT2}" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${FOPT3}" "${FOPT2} ${BIG_ENDIAN}" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
    string (REPLACE "${OPTREPORT0}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
    string (REPLACE "${FTZ}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
    string (REPLACE "${ALIGN_ALL}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
