--- a/GEOS_Shared/CMakeLists.txt
+++ b/GEOS_Shared/CMakeLists.txt
@@ -5,6 +5,7 @@ set (srcs
   tropovars.F90 surfacelayer.F90 GEOS_TopoGet.F90
   GEOS_GmapMod.F90 GEOS_RemapMod.F90 G3_MPI_Util_Mod.F90 windfix.F90
   PWSSSP.F sphere.F calcdbz.F OVP.F90
+  getco2.F90
   )
 
 esma_add_library(${this} SRCS ${srcs} DEPENDENCIES MAPL_Base)
