Enable compilation of an alternative code to generate SST's using ESMF regridding. This allows one to generate SST without having to generate yet more tile files

--- a/GEOS_Util/pre/NSIDC-OSTIA_SST-ICE_blend/CMakeLists.txt
+++ b/GEOS_Util/pre/NSIDC-OSTIA_SST-ICE_blend/CMakeLists.txt
@@ -23,6 +23,11 @@ ecbuild_add_executable (
   LIBS ${this})
 
 ecbuild_add_executable (
+  TARGET regrid_forcing_esmf.x
+  SOURCES regrid_forcing_esmf.F90
+  LIBS ${this})
+
+ecbuild_add_executable (
   TARGET sst_sic_EIGTHdeg.x
   SOURCES proc_SST_FRACI.F90
   LIBS ${this})
