recent plot updates from CVS Jason-3_3_aoil tag

--- a/GEOS_Util/plots/grads_util/plot.rc
+++ b/GEOS_Util/plots/grads_util/plot.rc
@@ -1209,6 +1209,18 @@ RMS_DTDT_ANA_AGCM_FACTOR: 86400
 RMS_DQVDT_ANA_AGCM_TITLE: DQVDT from Analysis (g/kg/day)  Root_Mean_Square Error
 RMS_DQVDT_ANA_AGCM_FACTOR: 86400000
 
+* Uncomment These Parameters to used Fixed Contour Intervals and Scaling in Stat DIFF Plots
+* -----------------------------------------------------------------------------------------
+*RMS_DMDTANA_DYN_FIXED_PLOT_FACTOR: -2
+*RMS_DMDTANA_DYN_FIXED_PLOT_CINT: 1.5
+*RMS_DUDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*RMS_DUDT_ANA_AGCM_FIXED_PLOT_CINT: 4
+*RMS_DVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*RMS_DVDT_ANA_AGCM_FIXED_PLOT_CINT: 4
+*RMS_DTDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*RMS_DTDT_ANA_AGCM_FIXED_PLOT_CINT: 1.5
+*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
+*RMS_DQVDT_ANA_AGCM_FIXED_PLOT_CINT: 1
 
 BIAS_DMDTANA_DYN_TITLE: DMDT from Analysis (mb/day)  Root_Bias Error
 BIAS_DMDTANA_DYN_FACTOR: 864
