--- a/GEOS_Shared/Chem_Shared2G/CMakeLists.txt
+++ b/GEOS_Shared/Chem_Shared2G/CMakeLists.txt
@@ -8,7 +8,7 @@ set (srcs
 
 esma_add_library(${this} 
   SRCS ${srcs} 
-  DEPENDENCIES MAPL_Base)
+  DEPENDENCIES MAPL_Base GMAO_mpeu)
 
 target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
 
