--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,44 @@
 esma_check_if_debug()
 
-esma_add_subdirectories(
-  GMAO_mpeu
-  GMAO_pilgrim
-  GMAO_etc
-  GEOS_Shared
-  GMAO_hermes
-  GEOS_Util 
-  LANL_Shared
-  GMAO_perllib
-  GMAO_transf
-  GMAO_stoch
+if ( DEFINED HERMES_LIGHT )
 
-  GEOS_Pert
-  GMAO_mfhdf3
-  GMAO_gfioeos
-  GMAO_ods
-  GMAO_psas
-  GMAO_gems
-  GMAO_iret
-  GMAO_pyobs
-  GMAO_radmon
+   esma_add_subdirectories(GEOS_Shared)
+   esma_add_subdirectories(GMAO_hermes)
 
-  GMAO_ncdiag
-  arpack
-  pnagpack
-  )
+else ()
 
-# Special case - GMAO_gfio is built twice with two different precisions.
-if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/GMAO_gfio)
-  add_subdirectory (GMAO_gfio GMAO_gfio_r4)
-  add_subdirectory (GMAO_gfio GMAO_gfio_r8)
-  add_dependencies (GMAO_gfio_r4 GMAO_gfio_r8)
-endif ()
-
+   esma_add_subdirectories(
+     GMAO_mpeu
+     GMAO_pilgrim
+     GMAO_etc
+     GEOS_Shared
+     GMAO_hermes
+     GEOS_Util 
+     LANL_Shared
+     GMAO_perllib
+     GMAO_transf
+     GMAO_stoch
+   
+     GEOS_Pert
+     GMAO_mfhdf3
+     GMAO_gfioeos
+     GMAO_ods
+     GMAO_psas
+     GMAO_gems
+     GMAO_iret
+     GMAO_pyobs
+     GMAO_radmon
+   
+     GMAO_ncdiag
+     arpack
+     pnagpack
+     )
+   
+   # Special case - GMAO_gfio is built twice with two different precisions.
+   if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/GMAO_gfio)
+     add_subdirectory (GMAO_gfio GMAO_gfio_r4)
+     add_subdirectory (GMAO_gfio GMAO_gfio_r8)
+     add_dependencies (GMAO_gfio_r4 GMAO_gfio_r8)
+   endif ()
+   
+endif()
