accomodate renaming of GriddedEmission.F90 to GOCART2G_Process.F90

--- a/GEOS_Shared/Chem_Shared2G/CMakeLists.txt
+++ b/GEOS_Shared/Chem_Shared2G/CMakeLists.txt
@@ -4,7 +4,7 @@ set (srcs
   Chem_MieMod2G.F90
   Chem_MieTableMod.F90
   Chem_AeroGeneric.F90
-  GriddedEmission.F90
+  GOCART2G_Process.F90
   )
 
 esma_add_library(${this} 
