--- a/GEOS_Shared/Chem_Shared2G/CMakeLists.txt
+++ b/GEOS_Shared/Chem_Shared2G/CMakeLists.txt
@@ -1,14 +1,12 @@
 esma_set_this ()
 
 set (srcs
-  Chem_MieTableMod2G.F90
   Chem_AeroGeneric.F90
-  GOCART2G_Process.F90
   )
 
 esma_add_library(${this} 
   SRCS ${srcs} 
-  DEPENDENCIES MAPL GMAO_mpeu)
+  DEPENDENCIES MAPL)
 
 target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
 
