Use MAPL not MAPL_Base in CMakeLists.txt

--- a/GEOS_Pert/GEOS_PertShared/CMakeLists.txt
+++ b/GEOS_Pert/GEOS_PertShared/CMakeLists.txt
@@ -2,6 +2,6 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS GEOS_PertSharedMod.F90
-  DEPENDENCIES MAPL_cfio_r4 MAPL_Base GMAO_mpeu GMAO_hermes
+  DEPENDENCIES MAPL_cfio_r4 MAPL GMAO_mpeu GMAO_hermes
   INCLUDES ${INC_ESMF})
 
