Add dependency for dyndiff

--- a/GMAO_hermes/CMakeLists.txt
+++ b/GMAO_hermes/CMakeLists.txt
@@ -47,7 +47,7 @@ if ( NOT HERMES_LIGHT )
    ecbuild_add_executable (TARGET dyn2prs.x        SOURCES dyn2prs.f90        LIBS ${this})
    ecbuild_add_executable (TARGET dyn2rs5.x        SOURCES dyn2rs5.f90        LIBS ${this})
    ecbuild_add_executable (TARGET dyn52dyn.x       SOURCES dyn52dyn.f90       LIBS ${this})
-   ecbuild_add_executable (TARGET dyndiff.x        SOURCES dyndiff.f90        LIBS ${this})
+   ecbuild_add_executable (TARGET dyndiff.x        SOURCES dyndiff.f90        LIBS ${this} GEOS_Shared)
    ecbuild_add_executable (TARGET dyndims.x        SOURCES dyndims.f          LIBS ${this})
    ecbuild_add_executable (TARGET dynp.x           SOURCES dynp.f90           LIBS ${this})
    ecbuild_add_executable (TARGET echorc.x         SOURCES echorc.f90         LIBS ${this})
