--- a/GMAO_hermes/tavg3d_met_e.rc
+++ b/GMAO_hermes/tavg3d_met_e.rc
@@ -42,12 +42,12 @@ KH:	    Total scalar diffusivity
 KM:	    Total momentum diffusivity
 MFZ:        Upward resolved Mass flux
 
-history:        @CVSTAG
+history:        @CVSTAG@
 convention:     CF-1.0
 institution:    Global Modeling and Assimilation Office (GMAO), NASA Goddard Space Flight Center, Greenbelt, MD 20771
 references:     http://gmao.gsfc.nasa.gov
 comment:        This HDF-4 file uses gzip.
-source:         @PUBLICTAG
-title:          @PUBLICTAG forward-processing
+source:         @PUBLICTAG@
+title:          @PUBLICTAG@ forward-processing
 contact:        data@gmao.gsfc.nasa.gov
 
