--- a/GMAO_hermes/inst3d_met_p.rc
+++ b/GMAO_hermes/inst3d_met_p.rc
@@ -79,12 +79,12 @@ StandardName:U:         Zonal_wind
 StandardName:V:         Meridional_wind
 
 
-history:        @CVSTAG
+history:        @CVSTAG@
 convention:     CF-1.0
 institution:    Global Modeling and Assimilation Office (GMAO), NASA Goddard Space Flight Center, Greenbelt, MD 20771
 references:     http://gmao.gsfc.nasa.gov
 comment:        This HDF-4 file uses gzip.  
-source:         @PUBLICTAG
-title:          @PUBLICTAG forward-processing
+source:         @PUBLICTAG@
+title:          @PUBLICTAG@ forward-processing
 contact:        data@gmao.gsfc.nasa.gov
 
