--- a/GMAO_hermes/inst6_3d_ana_Nv.rc
+++ b/GMAO_hermes/inst6_3d_ana_Nv.rc
@@ -73,7 +73,7 @@ history:        File written by CFIO
 convention:     CF-1.0
 institution:    Global Modeling and Assimilation Office, NASA Goddard Space Flight Center, Greenbelt, MD 20771
 references:     http://gmao.gsfc.nasa.gov/
-comment:        @PUBLICTAG
+comment:        @PUBLICTAG@
 source:         Global Modeling and Assimilation Office
-title:          MERRA2 reanalysis.  @PUBLICTAG
+title:          MERRA2 reanalysis.  @PUBLICTAG@
 contact:        http://gmao.gsfc.nasa.gov/
