--- a/GMAO_hermes/tavg3d_cld_v.rc
+++ b/GMAO_hermes/tavg3d_cld_v.rc
@@ -50,12 +50,12 @@ QL:         Cloud liquid water mixing ratio
 TAUCLI:     Layer total optical thickness of ice clouds
 TAUCLW:     Layer total optical thickness of liquid clouds
 
-history:        @CVSTAG
+history:        @CVSTAG@
 convention:     CF-1.0
 institution:    Global Modeling and Assimilation Office (GMAO), NASA Goddard Space Flight Center, Greenbelt, MD 20771
 references:     http://gmao.gsfc.nasa.gov
 comment:        This HDF-4 file uses gzip.
-source:         @PUBLICTAG
-title:          @PUBLICTAG forward-processing
+source:         @PUBLICTAG@
+title:          @PUBLICTAG@ forward-processing
 contact:        data@gmao.gsfc.nasa.gov
 
