--- a/GMAO_hermes/tavg3d_mst_v.rc
+++ b/GMAO_hermes/tavg3d_mst_v.rc
@@ -56,12 +56,12 @@ DQVDTDYN:   Water vapor tendency from dynamics
 DQVDTMST:   Water vapor tendency from moist physics
 DQVDTTRB:   Water vapor tendency from turbulence
 
-history:        @CVSTAG
+history:        @CVSTAG@
 convention:     CF-1.0
 institution:    Global Modeling and Assimilation Office (GMAO), NASA Goddard Space Flight Center, Greenbelt, MD 20771
 references:     http://gmao.gsfc.nasa.gov
 comment:        This HDF-4 file uses gzip.
-source:         @PUBLICTAG
-title:          @PUBLICTAG forward-processing
+source:         @PUBLICTAG@
+title:          @PUBLICTAG@ forward-processing
 contact:        data@gmao.gsfc.nasa.gov
 
