--- a/GMAO_hermes/tavg3d_prs_v.rc
+++ b/GMAO_hermes/tavg3d_prs_v.rc
@@ -48,11 +48,11 @@ PS:         Surface pressure (two-dimensional field)
 DELP:	    Pressure difference between layer edges
 PL:         Layer pressure
 
-history: 	@CVSTAG
+history: 	@CVSTAG@
 convention:	CF-1.0
 institution:	Global Modeling and Assimilation Office (GMAO), NASA Goddard Space Flight Center, Greenbelt, MD 20771
 references:	http://gmao.gsfc.nasa.gov
 comment:        This HDF-4 file uses gzip.
-source:	        @PUBLICTAG
-title:		@PUBLICTAG forward-processing
+source:	        @PUBLICTAG@
+title:		@PUBLICTAG@ forward-processing
 contact:	data@gmao.gsfc.nasa.gov
