--- a/GMAO_hermes/tavg3d_tmp_v.rc
+++ b/GMAO_hermes/tavg3d_tmp_v.rc
@@ -64,11 +64,11 @@ DTDTSWR:    Temperature tendency from short wave radiation
 DTDTSWRCLR: Temperature tendency from short wave radiation (clear sky)
 DTDTTRB:    Temperature tendency from turbulence
 
-history:        @CVSTAG
+history:        @CVSTAG@
 convention:     CF-1.0
 institution:    Global Modeling and Assimilation Office (GMAO), NASA Goddard Space Flight Center, Greenbelt, MD 20771
 references:     http://gmao.gsfc.nasa.gov
 comment:        This HDF-4 file uses gzip.
-source:         @PUBLICTAG
-title:          @PUBLICTAG forward-processing
+source:         @PUBLICTAG@
+title:          @PUBLICTAG@ forward-processing
 contact:        data@gmao.gsfc.nasa.gov
