--- a/GMAO_hermes/tavg3d_wnd_v.rc
+++ b/GMAO_hermes/tavg3d_wnd_v.rc
@@ -62,11 +62,11 @@ DVDTGWD:    V-wind tendency from gravity wave drag
 DVDTMST:    V-wind tendency from moist physics
 DVDTTRB:    V-wind tendency from turbulence
 
-history:        @CVSTAG
+history:        @CVSTAG@
 convention:     CF-1.0
 institution:    Global Modeling and Assimilation Office (GMAO), NASA Goddard Space Flight Center, Greenbelt, MD 20771
 references:     http://gmao.gsfc.nasa.gov
 comment:        This HDF-4 file uses gzip.
-source:         @PUBLICTAG
-title:          @PUBLICTAG forward-processing
+source:         @PUBLICTAG@
+title:          @PUBLICTAG@ forward-processing
 contact:        data@gmao.gsfc.nasa.gov
