--- a/GEOS_Util/plots/grads_util/plot.rc
+++ b/GEOS_Util/plots/grads_util/plot.rc
@@ -401,7 +401,6 @@ Q_MOIST_850_ALEVS:  -1.8 -1.6 -1.4 -1.2 -1 -0.8 -0.6 -0.4 -0.2 0.2 0.4 0.6 0.8 1
 Q_MOIST_925_ALEVS:  -1.8 -1.6 -1.4 -1.2 -1 -0.8 -0.6 -0.4 -0.2 0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8
 Q_MOIST_1000_ALEVS: -1.8 -1.6 -1.4 -1.2 -1 -0.8 -0.6 -0.4 -0.2 0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8
 
-
 RH2_MOIST_TITLE: Relative Humidity (%)
 RH2_MOIST_CCOLS: 59 58 57 56 55 54 53 52 51 50 42 43 44 45 46 47 48 49 39 38 37 36 35 34 33 32 31 21 22 23 24 25 26 27 28 29
 RH2_MOIST_CVALS: 3 6 9 12 15 18 21 24 27 30 33 36 39 42 45 48 51 54 57 60 63 66 69 72 75 78 81 84 87 90 93 96 99 100
@@ -1245,6 +1244,11 @@ RMS_DQVDT_ANA_AGCM_FACTOR: 86400000
 
 * Uncomment These Parameters to used Fixed Contour Intervals and Scaling in Stat DIFF Plots
 * -----------------------------------------------------------------------------------------
+*RES_DYN_FIXED_PLOT_FACTOR: 0
+*RES_DYN_FIXED_PLOT_CINT: 0.5
+*STR_DYN_FIXED_PLOT_FACTOR: 0
+*STR_DYN_FIXED_PLOT_CINT: 0.2
+
 *RMS_DMDTANA_DYN_FIXED_PLOT_FACTOR: -2
 *RMS_DMDTANA_DYN_FIXED_PLOT_CINT: 1.5
 *RMS_DUDT_ANA_AGCM_FIXED_PLOT_FACTOR: -2
@@ -1303,6 +1307,9 @@ DTDT_ANA_AGCM_Z_DLEVS: -2.25 -2 -1.75 -1.5 -1.25 -1 -0.75 -0.5 -.25 .25 .5 0.75 
 DTDT_ANA_AGCM_Z_ALEVS: -1.4 -1.2 -1.0 -.8 -.6 -.4 -0.3 -0.2 -.1 .1 .2 .3 .4 .6 .8 1.0 1.2 1.4
 
 
+DQVDT_CON_AGCM_TITLE: DQVDT from Constraint (g/kg/day)
+DQVDT_CON_AGCM_FACTOR: 86400000
+
 DQVDT_ANA_AGCM_TITLE: DQVDT from Analysis (g/kg/day)
 DQVDT_ANA_AGCM_FACTOR: 86400000
 DQVDT_ANA_AGCM_CCOLS: 55  49  47  45  44  36  34  33  32  0  21  22  23  24  25  26  27  28 69
@@ -1352,6 +1359,9 @@ DMDTDYNANA_DYN_TITLE: Surface Pressure Tendency from DYN+ANA (mb/day)
 DMDTDYNANA_DYN_FACTOR: 9.80665*864
 DMDTDYNANA_DYN_CCOLS: 55  49  47  45  44  36  34  33  32  0  21  22  23  24  25  26  27  28 69
 DMDTDYNANA_DYN_CLEVS: -0.9 -0.8 -0.7 -0.6 -0.5 -0.4 -0.3 -0.2 -0.1 0.1 0.2 0.3 0.4 0.5 .6 0.7 0.8 0.9
+
+DPSDT_CON_AGCM_TITLE: Surface Pressure Tendency from Constraint (mb/day)
+DPSDT_CON_AGCM_FACTOR: 864
 
 DMDTANA_DYN_TITLE: Surface Pressure Tendency from Analysis (mb/day)
 DMDTANA_DYN_FACTOR: 9.80665*864
